# Rehighlighter

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  overview_cache.rs  tab.rs  timestamp.rs
src/indexer/: line_index.rs  mmap.rs  mod.rs
src/search/: filter.rs  mod.rs
src/theme/: fonts.rs  mod.rs
src/ui/: detail_panel.rs  histogram.rs  log_view.rs  mod.rs  overview.rs  search_bar.rs  status_bar.rs  tab_bar.rs
