[package]
name = "rehighlighter"
version = "0.1.0"
edition = "2021"
description = "A high-performance cross-platform log viewer"
license = "MIT"

[[bin]]
name = "rehighlighter"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = "0.29"
memmap2 = "0.9"
memchr = "2.7"
regex = "1.10"
rfd = "0.15"
dark-light = "1.1"
font-kit = "0.14"
crossbeam-channel = "0.5"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
